# Anki-Decks

./: .pre-commit-config.yaml  .secrets.baseline  README.md  _typos.toml  pyproject.toml  requirements.txt
.github/workflows/: deptry-check.yaml  test.yaml
assets/: commands.txt  media_files.json
assets/misc/: decisions.md  deck-sources.md  entries-for-memorization.md  feature-list.md  genanki-notes.md  genanki-readme.md  genanki_notes.md  notes.md  resources.md  useful-links.md
assets/misc/deck_notes/: chronostratigraphy_ics_notes.md  infectious_disease_modeling_notes.md
input_decks/: chronostratigraphy_ics.md  deck_commands.txt  infectious_disease_modeling_work.md  introducing_geology_park_edition_3.md  test_deck.md
output/: 2020_ITPATFR_Benton.apkg  O927_General_Knowledge.apkg
output_decks/: chronostratigraphy_ics.apkg  understand_analysis.apkg
raw_decks/: 2020_ITPATFR_Benton.json  O927_General_Knowledge.json  O957_General_Knowledge.json  Oxford_Dictionaries.json  deck_commands.txt
rendered_anki_decks/: Oxford_Dictionaries.apkg
scripts/: convert_json_to_anki.py  convert_md_to_anki.py  gather_media_file_names.py
src/: convert_md_to_anki.py
tests/: test_deck_formatting.py
