[tool.poetry]
name = "anki-decks"
version = "0.0.1"
description = "The author's personal Anki workflow."
authors = ["AFg6K7h4fhy2 <127630341+AFg6K7h4fhy2@users.noreply.github.com>"]
license = "Apache-2.0"
package-mode = false
readme = "README.md"
repository = "https://github.com/AFg6K7h4fhy2/Anki-Decks"
keywords = ["anki", "spaced-repetition", "human-memory", "personal"]

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.7.0"
genanki = "^0.13.1"

[tool.poetry.urls]
"Repository Issues" = "https://github.com/AFg6K7h4fhy2/Anki-Decks/issues"
"Author Homepage" = "https://github.com/AFg6K7h4fhy2"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
