[project]
name = "anki-decks"
version = "0.0.1"
description = "The author's personal Anki workflow, making use of genanki."
authors = [
  {name = "AFg6K7h4fhy2", email = "127630341+AFg6K7h4fhy2@users.noreply.github.com"},
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13"
repository = "https://github.com/AFg6K7h4fhy2/Anki-Decks"
keywords = ["anki", "spaced-repetition", "human-memory", "personal"]
dependencies = [
    "genanki>=0.13.1",
]

[project.urls]
"Repository" = "https://github.com/AFg6K7h4fhy2/Anki-Decks"
"Repository Issues" = "https://github.com/AFg6K7h4fhy2/Anki-Decks/issues"
"Author Homepage" = "https://github.com/AFg6K7h4fhy2"

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
]

[dependency-groups]
dev = [
    "polars>=1.32.0",
]

[tool.deptry]
pep621_dev_dependency_groups = ["dev", "test"]
